samples/_failures_safe/1761720945_8fe468_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89554525.c: In function ‘print_high_severity_logs’:
./samples/SAFE/__tmp_89554525.c:137:5: error: expected identifier at end of input
  137 |     for (int i = 0; i < analyzer->
      |     ^~~
./samples/SAFE/__tmp_89554525.c:137:5: error: expected declaration or statement at end of input
